--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -162,6 +162,7 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
+  <!-- 用户列表模板 -->
   <script id="tplUser" type="text/html">
 {{each res}}
     <tr>
@@ -179,11 +180,12 @@
         <td>{{$value.role=="admin"?"超级管理员":'普通用户'}}</td>
         <td class="text-center">
           <a href="javascript:;" class="btn btn-default btn-xs edit" data-id='{{$value._id}}'>编辑</a>
-          <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs del" data-id='{{$value._id}}'>删除</a>
         </td>
       </tr>
       {{/each}}
   </script>
+  <!-- 用户修改模板 -->
   <script id="tplEdit" type="text/html">
     
     <form id="formModify" data-id='{{response._id}}'>
@@ -327,6 +329,20 @@
 
           })
      return false;
+    });
+    //删除用户
+    $("#tb").on("click",".del",function(){
+      if(confirm("确认删除该用户么？")){
+        const id = $(this).data("id");
+        $.ajax({
+          type:"delete",
+          url:"/users/"+id,
+          success:function(){
+             location.reload();
+          }
+        })
+      }
+     
     })
   </script>
 </body>
