--- a/public/admin/categories.html
+++ b/public/admin/categories.html
@@ -1,12 +1,13 @@
 <script src="/login/status"></script>
 <script>
-  if(!isLogin){
+  if (!isLogin) {
     location.href = "login.html";
   }
-  
+
 </script>
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Categories &laquo; Admin</title>
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -36,16 +38,16 @@
         <strong>错误！</strong>发生XXX错误
       </div> -->
       <div class="row">
-        <div class="col-md-4">
-          <form>
+        <div class="col-md-4 cgsOption">
+          <form id="cgsAddForm">
             <h2>添加分类</h2>
             <div class="form-group">
               <label>名称</label>
-              <input class="form-control" type="text" placeholder="请输入分类名称">
+              <input class="form-control" type="text" placeholder="请输入分类名称" name="title">
             </div>
             <div class="form-group">
               <label>图标</label>
-              <input class="form-control" type="text" placeholder="请输入分类图标类名">
+              <input class="form-control" type="text" placeholder="请输入分类图标类名" name="className">
             </div>
             <div class="form-group">
               <button class="btn btn-primary" type="submit">添加</button>
@@ -64,23 +66,7 @@
                 <th class="text-center" width="100">操作</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td class="text-center"><input type="checkbox"></td>
-                <td>奇趣事</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center"><input type="checkbox"></td>
-                <td>潮科技</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
+            <tbody id="tb">
               <tr>
                 <td class="text-center"><input type="checkbox"></td>
                 <td>奇趣事</td>
@@ -134,6 +120,111 @@
   </div>
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
   <script>NProgress.done()</script>
+  <!-- 分类展示模板 -->
+  <script id="cgsTpl" type="text/html">
+    {{each res}}
+    <tr>
+        <td class="text-center"><input type="checkbox"></td>
+        <td>{{$value.title}}</td>
+        <td class="text-center">
+          <a href="javascript:;" class="btn btn-info btn-xs edit" data-id='{{$value._id}}'>编辑</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs del" data-id='{{$value._id}}'>删除</a>
+        </td>
+      </tr>
+      {{/each}}
+  </script>
+  <!-- 分类修改模板 -->
+  <script id="cgsMdyTpl" type="text/html">
+  <form id="cgsMdyForm" data-id='{{res._id}}'>
+            <h2>修改分类</h2>
+            <div class="form-group">
+              <label>名称</label>
+              <input class="form-control" type="text" placeholder="请输入分类名称" name="title" value='{{res.title}}'>
+            </div>
+            <div class="form-group">
+              <label>图标</label>
+              <input class="form-control" type="text" placeholder="请输入分类图标类名" name="className" value='{{res.className}}'>
+            </div>
+            <div class="form-group">
+              <button class="btn btn-primary" type="submit">修改</button>
+            </div>
+          </form>
+  </script>
+  <script>
+
+    //添加分类功能
+    $("#cgsAddForm").on("submit", function () {
+      var form = $(this).serialize();
+      $.ajax({
+        type: 'post',
+        url: '/categories',
+        data: form,
+        success: function (res) {
+          location.reload()
+        },
+        error: function (err) {
+          console.log(err.responseText);
+        }
+      })
+      return false;
+
+    })
+    //展示分类
+    $.ajax({
+      type: "get",
+      url: "/categories",
+      success: function (res) {
+        var html = template("cgsTpl", { res: res })
+        $("#tb").html(html)
+
+      }
+    })
+    //分类修改功能
+    $("#tb").on("click", ".edit", function () {
+      var id = $(this).data("id");
+      $.ajax({
+        type: "get",
+        url: "/categories/" + id,
+        success: function (res) {
+          var html = template("cgsMdyTpl",{res:res});
+          console.log(html);
+          $(".cgsOption").html(html);
+        }
+      })
+    })
+    //修改分类提交
+    $(".cgsOption").on("submit","#cgsMdyForm",function(){
+        var id  =$(this).data("id");
+        var data =  $(this).serialize();
+        $.ajax({
+        type: "put",
+        url: "/categories/" + id,
+        data:data,
+        success: function (res) {
+          location.reload()
+        }
+       
+      })
+      return false;
+    })
+    //删除分类
+    $("#tb").on("click",".del",function(){
+         if(confirm("Are you sure delete this category?")){
+          var id =  $(this).data("id");
+          $.ajax({
+            type:"delete",
+            url:"/categories/"+id,
+            success:function(){
+              location.reload()
+            }
+          })
+         }
+    })
+    //批量删除 
+    //coding.....
+  </script>
 </body>
+
 </html>
