--- a/public/admin/password-reset.html
+++ b/public/admin/password-reset.html
@@ -35,23 +35,23 @@
       <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-      <form class="form-horizontal">
+      <form class="form-horizontal" id="pwdModifyForm">
         <div class="form-group">
           <label for="old" class="col-sm-3 control-label">旧密码</label>
           <div class="col-sm-7">
-            <input id="old" class="form-control" type="password" placeholder="旧密码">
+            <input id="old" class="form-control" type="password" placeholder="旧密码" name="userPass">
           </div>
         </div>
         <div class="form-group">
           <label for="password" class="col-sm-3 control-label">新密码</label>
           <div class="col-sm-7">
-            <input id="password" class="form-control" type="password" placeholder="新密码">
+            <input id="password" class="form-control" type="password" placeholder="新密码" name="newPass">
           </div>
         </div>
         <div class="form-group">
           <label for="confirm" class="col-sm-3 control-label">确认新密码</label>
           <div class="col-sm-7">
-            <input id="confirm" class="form-control" type="password" placeholder="确认新密码">
+            <input id="confirm" class="form-control" type="password" placeholder="确认新密码" name="confirmPass">
           </div>
         </div>
         <div class="form-group">
@@ -103,5 +103,33 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script>NProgress.done()</script>
+  <script>
+    //修改用户密码功能
+    $("#pwdModifyForm").on("submit",function(){
+        var form = $(this).serialize();
+        $.ajax({
+          type:"put",
+          url:"/users/password",
+          data:form,
+          success:function(){
+            
+            $.ajax({
+            type: "post",
+            url: "/logout",
+            success: function () {
+                location.href = "login.html"
+            }
+        })
+          }
+
+
+        })
+        
+
+
+
+      return false;
+    })
+  </script>
 </body>
 </html>
