--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -35,15 +35,15 @@
       <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-      <form class="row">
+      <form class="row" id="postAddForm">
         <div class="col-md-9">
           <div class="form-group">
             <label for="title">标题</label>
             <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题">
           </div>
           <div class="form-group">
-            <label for="content">标题</label>
-            <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
+            <label for="content">内容</label>
+            <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="文章内容"></textarea>
           </div>
         </div>
         <div class="col-md-3">
@@ -52,23 +52,24 @@
             <!-- show when image chose -->
             <img class="help-block thumbnail" style="display: none">
             <input id="feature" class="form-control" name="feature" type="file">
+            <input type="hidden" name="thumbnail" id="thumbnail">
           </div>
           <div class="form-group">
             <label for="category">所属分类</label>
             <select id="category" class="form-control" name="category">
-              <option value="1">未分类</option>
-              <option value="2">潮生活</option>
+             
+
             </select>
           </div>
           <div class="form-group">
             <label for="created">发布时间</label>
-            <input id="created" class="form-control" name="created" type="datetime-local">
+            <input id="created" class="form-control" name="createAt" type="datetime-local">
           </div>
           <div class="form-group">
             <label for="status">状态</label>
-            <select id="status" class="form-control" name="status">
-              <option value="drafted">草稿</option>
-              <option value="published">已发布</option>
+            <select id="status" class="form-control" name="state">
+              <option value="0">草稿</option>
+              <option value="1">已发布</option>
             </select>
           </div>
           <div class="form-group">
@@ -118,6 +119,61 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
   <script>NProgress.done()</script>
+  <!-- 所属分类列表模板 -->
+  <script id="cgsShowTpl" type="text/html">
+    <option value="1">未分类</option>
+    {{each res}}
+    <option value="{{$value._id}}">{{$value.title}}</option>
+    {{/each}}
+  </script>
+  <script>
+    //展示分类列表
+    $.ajax({
+      type:"get",
+      url:"/categories",
+      success:function(res){
+       var html = template("cgsShowTpl",{res:res})
+        $("#category").html(html)
+      }
+    })
+    //选择封面上传
+    $("#feature").on("change",function(){
+        var formdata = new FormData();
+        formdata.append("cover",this.files[0]);
+        $.ajax({
+          type:"post",
+          url:"/upload",
+          data:formdata,
+          processData:false,
+          contentType:false,
+          success:function(res){
+           $("#thumbnail").val(res[0].cover) 
+          },
+          error:function(err){console.log(err);
+          }
+        })
+
+
+    })
+    //创建文章
+    $("#postAddForm").on("submit",function(){
+      var formdata = $(this).serialize()
+      $.ajax({
+        type:"post",
+        url:"/posts",
+        data:formdata,
+        success:function(res){
+          location.href="posts.html"
+        },
+        error:function(err){
+          console.log(err);
+        }
+
+      })
+      return false;
+    })
+  </script>
 </body>
 </html>
