--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -37,18 +37,18 @@
       <div class="page-action">
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
-        <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
+        <form class="form-inline" id="filterForm">
+          <select name="category" class="form-control input-sm" id="cgsAll">
+            <option value="*">所有分类</option>
           </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+          <select name="state" class="form-control input-sm" id="state">
+            <option value="*">所有状态</option>
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
-        <ul class="pagination pagination-sm pull-right">
+        <ul class="pagination pagination-sm pull-right" id="pageBox">
           <li><a href="#">上一页</a></li>
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
@@ -124,6 +124,7 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
+  <!-- 文章列表渲染模板 -->
   <script id="postsShowTpl" type="text/html">
     {{each res}}
     <tr>
@@ -139,29 +140,129 @@
       </tr>
       {{/each}}
   </script>
+  <!-- 文章分类选项框渲染模板 -->
+  <script id="cgsTpl" type="text/html">
+    <option value="*">所有分类</option>
+    {{each res}}
+    <option value="{{$value._id}}">{{$value.title}}</option>
+    {{/each}}
+  </script>
+  <!-- 文章分页渲染模板 -->
+  <script id="pageTpl" type="text/html">
+    {{if res.page>1}}
+    <li><a href="javascript:;" onclick = changePage({{res.page-1}})>上一页</a></li>
+    {{/if}}
+    {{each res.display}}
+    <li><a href="javascript:;" onclick = changePage({{$value}})>{{$value}}</a></li>
+    {{/each}}
+    {{if res.page<res.pages}}
+    <li><a href="javascript:;" onclick = changePage({{res.page+1}})>下一页</a></li>
+    {{/if}}
+  
+  </script>
   <script>NProgress.done()</script>
   <script>
+    //日期格式化函数
     function dateformat(date) {
       var d = new Date(date);
       var hour = d.getHours();
       var min = d.getMinutes();
       var sec = d.getSeconds();
-      console.log(hour);
-
       hour = hour < 10 ? "0" + hour : hour;
       min = min < 10 ? "0" + min : min;
       sec = sec < 10 ? "0" + sec : sec;
       return d.getFullYear() + "-" + (d.getMonth() + 1) + "-" + d.getDate() + " " + hour + ":" + min + ":" + sec
     }
     // template.defaults.imports.dateformat = dateformat;
+    //文章列表渲染和分页渲染
     $.ajax({
       type: "get",
       url: "/posts",
       success: function (res) {
+        console.log(res);
+
         var html = template("postsShowTpl", { res: res.records })
-        $("#tb").html(html)
+        $("#tb").html(html);
+        var html2 = template("pageTpl", { res: res })
+        $("#pageBox").html(html2)
       }
     })
+    //分类选项框渲染
+    $.ajax({
+      type: "get",
+      url: "/categories",
+      success: function (res) {
+        var html = template("cgsTpl", { res: res })
+        $("#cgsAll").html(html)
+      }
+    })
+    //表单对象转换函数
+    function serializeObj(obj) {
+      var newObj = {};
+      $.each(obj.serializeArray(), function (index, value) {
+        newObj[value.name] = value.value
+      });
+      return newObj;
+    }
+    //筛选文章表单提交
+    $("#filterForm").on("submit", function () {
+      var form = serializeObj($("#filterForm"));
+      var stateFit = form.state;
+      var cgsFit = form.category;
+      $.ajax({
+        type: "get",
+        url: "/posts",
+        success: function (res) {
+          var arr = res.records
+          var arrFilter = arr.filter(function (item) {
+            return item.state == stateFit && (item.category)._id == cgsFit
+          });
+          //筛选所有分类 所有状态
+          if (stateFit == "*" && cgsFit == "*") {
+            location.reload();
+            return;
+          }
+          //筛选所有状态
+          if (stateFit == "*") {
+            arrFilter = arr.filter(function (item) {
+              return (item.category)._id == cgsFit
+            })
+          }
+          //筛选所有分类
+          if (cgsFit == "*") {
+            arrFilter = arr.filter(function (item) {
+              return (item.state == stateFit)
+            })
+          }
+          var html = template("postsShowTpl", { res: arrFilter })
+          $("#tb").html(html);
+        }
+
+
+      })
+
+
+
+      return false;
+    })
+    //文章分页功能
+    function changePage(page) {
+      $.ajax({
+        type: "get",
+        url: "/posts",
+        data:{
+          page:page
+        },
+        success: function (res) {
+          var html = template("postsShowTpl", { res: res.records })
+          $("#tb").html(html);
+          var html2 = template("pageTpl", { res: res })
+          $("#pageBox").html(html2)
+        }
+      })
+
+
+    }
   </script>
 </body>
 
