--- a/public/admin/comments.html
+++ b/public/admin/comments.html
@@ -1,12 +1,13 @@
 <script src="/login/status"></script>
 <script>
-  if(!isLogin){
+  if (!isLogin) {
     location.href = "login.html";
   }
-  
+
 </script>
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Comments &laquo; Admin</title>
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -32,7 +34,7 @@
         <h1>所有评论</h1>
       </div>
       <div class="page-action">
-        <ul class="pagination pagination-sm pull-right">
+        <ul class="pagination pagination-sm pull-right " id="cmtPage">
           <li><a href="#">上一页</a></li>
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
@@ -51,7 +53,7 @@
             <th class="text-center" width="100">操作</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="tb">
           <tr class="danger">
             <td>大大</td>
             <td>楼主好人，顶一个</td>
@@ -63,28 +65,7 @@
               <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
             </td>
           </tr>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>已批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>已批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
+
         </tbody>
       </table>
     </div>
@@ -129,6 +110,38 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script src="../assets/js/common.js"></script>
+  <!-- 评论展示列表模板 -->
+  <script id="cmtTpl" type="text/html">
+    {{each records}}
+    <tr class="{{$value.state==1?'':'danger'}}">
+      <td>{{$value.author.nickName}}</td>
+      <td>{{$value.content}}</td>
+      <td>{{$value.post.title}}</td>
+      <td>{{dateformat($value.createAt)}}</td>
+      <td>{{$value.state==1?"批准":"未审核"}}</td>
+      <td class="text-center">
+        <a href="javascript:;" class="btn btn-info btn-xs changeState " data-id="{{$value._id}}" data-state='{{$value.state}}'>{{$value.state==1?"驳回":"批准"}}</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs del" data-id="{{$value._id}}">删除</a>
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+  <!-- 评论分页模板 -->
+  <script id="cmtPageTpl" type="text/html">
+    {{if page>1}}
+    <li><a href="javascript:;"onclick="changePage({{page-1}})">上一页</a></li>
+    {{/if}}
+    {{each display}}
+    <li><a href="javascript:;" onclick=changePage({{$value}})>{{$value}}</a></li>
+    {{/each}}
+    {{if page<pages}}
+    <li><a href="javascript:;"onclick="changePage({{page+1}})">下一页</a></li>
+    {{/if}}
+  </script>
   <script>NProgress.done()</script>
+ <script src="../assets/js/comments.js"></script>
 </body>
+
 </html>
