--- a/public/admin/password-reset.html
+++ b/public/admin/password-reset.html
@@ -102,34 +102,8 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/js/common.js"></script>
   <script>NProgress.done()</script>
-  <script>
-    //修改用户密码功能
-    $("#pwdModifyForm").on("submit",function(){
-        var form = $(this).serialize();
-        $.ajax({
-          type:"put",
-          url:"/users/password",
-          data:form,
-          success:function(){
-            
-            $.ajax({
-            type: "post",
-            url: "/logout",
-            success: function () {
-                location.href = "login.html"
-            }
-        })
-          }
-
-
-        })
-        
-
-
-
-      return false;
-    })
-  </script>
+ <script src="../assets/js/password-reset.js"></script>
 </body>
 </html>
