--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -152,121 +152,7 @@
   
   </script>
   <script>NProgress.done()</script>
-  <script>
-    //日期格式化函数
-    function dateformat(date) {
-      var d = new Date(date);
-      var hour = d.getHours();
-      var min = d.getMinutes();
-      var sec = d.getSeconds();
-      hour = hour < 10 ? "0" + hour : hour;
-      min = min < 10 ? "0" + min : min;
-      sec = sec < 10 ? "0" + sec : sec;
-      return d.getFullYear() + "-" + (d.getMonth() + 1) + "-" + d.getDate() + " " + hour + ":" + min + ":" + sec
-    }
-    template.defaults.imports.dateformat = dateformat;
-    //文章列表渲染和分页渲染
-    $.ajax({
-      type: "get",
-      url: "/posts",
-      success: function (res) {
-        console.log(res);
-
-        var html = template("postsShowTpl", { res: res.records })
-        $("#tb").html(html);
-        var html2 = template("pageTpl", { res: res })
-        $("#pageBox").html(html2)
-      }
-    })
-    //分类选项框渲染
-    $.ajax({
-      type: "get",
-      url: "/categories",
-      success: function (res) {
-        var html = template("cgsTpl", { res: res })
-        $("#cgsAll").html(html)
-      }
-    })
-    //表单对象转换函数
-    function serializeObj(obj) {
-      var newObj = {};
-      $.each(obj.serializeArray(), function (index, value) {
-        newObj[value.name] = value.value
-      });
-      return newObj;
-    }
-    //筛选文章表单提交
-    $("#filterForm").on("submit", function () {
-      var form = serializeObj($("#filterForm"));
-      var stateFit = form.state;
-      var cgsFit = form.category;
-      $.ajax({
-        type: "get",
-        url: "/posts",
-        success: function (res) {
-          var arr = res.records
-          var arrFilter = arr.filter(function (item) {
-            return item.state == stateFit && (item.category)._id == cgsFit
-          });
-          //筛选所有分类 所有状态
-          if (stateFit == "*" && cgsFit == "*") {
-            location.reload();
-            return;
-          }
-          //筛选所有状态
-          if (stateFit == "*") {
-            arrFilter = arr.filter(function (item) {
-              return (item.category)._id == cgsFit
-            })
-          }
-          //筛选所有分类
-          if (cgsFit == "*") {
-            arrFilter = arr.filter(function (item) {
-              return (item.state == stateFit)
-            })
-          }
-          var html = template("postsShowTpl", { res: arrFilter })
-          $("#tb").html(html);
-        }
-
-
-      })
-
-
-
-      return false;
-    })
-    //文章分页功能
-    function changePage(page) {
-      $.ajax({
-        type: "get",
-        url: "/posts",
-        data: {
-          page: page
-        },
-        success: function (res) {
-          var html = template("postsShowTpl", { res: res.records })
-          $("#tb").html(html);
-          var html2 = template("pageTpl", { res: res })
-          $("#pageBox").html(html2)
-        }
-      })
-
-
-    }
-    //文章删除功能
-    $("#tb").on("click", ".del", function () {
-      var id = $(this).data("id");
-      $.ajax({
-        type:"delete",
-        url:"/posts/"+id,
-        success:function(){
-            location.reload()
-        }
-      })
-    })
-
-  </script>
+ <script src="../assets/js/posts.js"></script>
 </body>
 
 </html>
