--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -37,20 +37,21 @@
       </div> -->
       <div class="row">
         <div class="col-md-4">
-          <form>
+          <form id="form">
             <h2>添加新轮播内容</h2>
             <div class="form-group">
               <label for="image">图片</label>
               <!-- show when image chose -->
-              <img class="help-block thumbnail" style="display: none">
-              <input id="image" class="form-control" name="image" type="file">
+              <img class="help-block thumbnail" style="display: none" id="img">
+              <input id="image" class="form-control"  type="file" >
+              <input type="hidden" id="hiddenIpt" name="image" >
             </div>
             <div class="form-group">
               <label for="text">文本</label>
-              <input id="text" class="form-control" name="text" type="text" placeholder="文本">
+              <input id="text" class="form-control" name="title" type="text" placeholder="文本">
             </div>
             <div class="form-group">
-              <label for="link">链接</label>
+              <label for="link">文章链接</label>
               <input id="link" class="form-control" name="link" type="text" placeholder="链接">
             </div>
             <div class="form-group">
@@ -68,23 +69,8 @@
                 <th class="text-center" width="100">操作</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td class="text-center"><img class="slide" src="../uploads/slide_1.jpg"></td>
-                <td>XIU功能演示</td>
-                <td>#</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center"><img class="slide" src="../uploads/slide_2.jpg"></td>
-                <td>XIU功能演示</td>
-                <td>#</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
+            <tbody id="tb">
+  
             </tbody>
           </table>
         </div>
@@ -131,6 +117,21 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script src="../assets/js/common.js"></script>
+  <script id="crsTpl" type="text/html">
+    {{each res}}
+    <tr>
+        <td class="text-center"><img class="slide" src="{{$value.image}}"></td>
+        <td>{{$value.title}}</td>
+        <td>{{$value.link}}</td>
+        <td class="text-center">
+          <a href="javascript:;" class="btn btn-danger btn-xs del" data-id='{{$value._id}}'>删除</a>
+        </td>
+      </tr>
+      {{/each}}
+  </script>
   <script>NProgress.done()</script>
+ <script src="/assets/js/slides.js"></script>
 </body>
 </html>
