--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -43,9 +43,9 @@
               <h3 class="panel-title">站点内容统计：</h3>
             </div>
             <ul class="list-group">
-              <li class="list-group-item"><strong>10</strong>篇文章（<strong>2</strong>篇草稿）</li>
-              <li class="list-group-item"><strong>6</strong>个分类</li>
-              <li class="list-group-item"><strong>5</strong>条评论（<strong>1</strong>条待审核）</li>
+              <li class="list-group-item"><strong id="postCount">10</strong>篇文章（<strong id="draftCount">2</strong>篇草稿）</li>
+              <li class="list-group-item"><strong id="categoryCount">6</strong>个分类</li>
+              <li class="list-group-item"><strong id="commentCount">5</strong>条评论</li>
             </ul>
           </div>
         </div>
@@ -57,8 +57,8 @@
 
   <div class="aside">
     <div class="profile">
-      <img class="avatar" src="../uploads/avatar.jpg">
-      <h3 class="name">Coder</h3>
+      <img class="avatar" src="../uploads/avatar.jpg" id="userAvatar">
+      <h3 class="name" id="userName">Coder</h3>
     </div>
     <ul class="nav">
       <li class="active">
@@ -96,6 +96,7 @@
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/js/common.js"></script>
   <script>NProgress.done()</script>
+  <script src="../assets/js/index.js"></script>
 </body>
 
 </html>
