--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -28,35 +28,7 @@
     </div>
   </div>
   <script src="../assets/vendors/jquery/jquery.min.js"></script>
-  <script>
-    $("#loginBtn").on("click", function () {
-      const email = $("#email").val();
-      const password = $("#password").val();
-      if (email.trim() == '' || password.trim() == '') {
-        alert("请输入邮箱名或密码");
-        return;
-      }
-      $.ajax({
-        type: "post",
-        url: "/login",
-        data: {
-          email: email,
-          password: password
-        },
-        success: function (res) {
-         location.href = "index.html"
-
-        },
-        error: function (err) {
-          alert("邮箱名或密码错误，请确认后登录")
-          console.log("error:", err);
-        }
-
-      })
-
-
-    })
-  </script>
+  <script src="../assets/js/login.js"></script>
 </body>
 
 </html>
