--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -123,6 +123,7 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script src="../assets/js/common.js"></script>
   <script>NProgress.done()</script>
   <!-- 所属分类列表模板 -->
   <script id="cgsShowTpl" type="text/html">
@@ -181,102 +182,7 @@
     </form>
 
 </script>
-  <script>
-    //展示分类列表
-    $.ajax({
-      type: "get",
-      url: "/categories",
-      success: function (res) {
-        var html = template("cgsShowTpl", { res: res })
-        $("#category").html(html)
-      }
-    })
-    //选择封面上传
-    $("#feature").on("change", function () {
-      var formdata = new FormData();
-      formdata.append("cover", this.files[0]);
-      $.ajax({
-        type: "post",
-        url: "/upload",
-        data: formdata,
-        processData: false,
-        contentType: false,
-        success: function (res) {
-          $("#thumbnail").val(res[0].cover)
-        },
-        error: function (err) {
-          console.log(err);
-        }
-      })
-
-
-    })
-    //创建文章
-    $("#postAddForm").on("submit", function () {
-      var formdata = $(this).serialize()
-      $.ajax({
-        type: "post",
-        url: "/posts",
-        data: formdata,
-        success: function (res) {
-          location.href = "posts.html"
-        },
-        error: function (err) {
-          console.log(err);
-        }
-      })
-      return false;
-    })
-    //获取url参数函数
-    function getUrlParams(name) {
-      var urlParams = (location.search).slice(1).split("&");
-      for (var v of urlParams) {
-        if (v.split("=")[0] == name) {
-          return v.split("=")[1];
-        }
-      }
-      return -1;
-    }
-    //文章修改渲染
-    if (getUrlParams("id") != -1) {
-      $.ajax({
-        type: "put",
-        url: "/posts/" + getUrlParams("id"),
-        success: function (res) {
-          $.ajax({
-            type: "get",
-            url: "/categories",
-            success: function (response) {
-              res.cgsAll = response;
-              console.log(res);
-              var html = template("mdyFormTpl", res)
-              $("#postAddBox").html(html)
-            }
-          })
-        }
-      })
-
-
-    }
-    //提交文章修改
-    $("#postAddBox").on("submit","#postMdyForm",function(){
-      var formdata = $(this).serialize();
-      var id = $(this).data("id")
-      $.ajax({
-        type: "put",
-        url: "/posts/"+id,
-        data: formdata,
-        success: function (res) {
-          location.href = "posts.html"
-        }
-      })
-      
-      return false;
-    })
-  
-
-
-  </script>
+ <script src="../assets/js/post-add.js"></script>
 </body>
 
 </html>
