--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -166,7 +166,7 @@
         </div>
         <div class="form-group">
           <label for="created">发布时间</label>
-          <input id="created" class="form-control" name="createAt" type="datetime-local" value = '{{createAt.slice(0,-8)}}'>
+          <input id="created" class="form-control" name="createAt" type="datetime-local" value = '{{createAt}}'>
         </div>
         <div class="form-group">
           <label for="status">状态</label>
