--- a/public/detail.html
+++ b/public/detail.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NBA球员简介</title>
   <link rel="shortcut icon" href="https://mat1.gtimg.com/chinanba/images/favicon.ico">
-  <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/vendors/font-awesome/css/font-awesome.css">
 
