--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>NBA球员简介首页</title>
   <link rel="shortcut icon" href="https://mat1.gtimg.com/chinanba/images/favicon.ico">
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="/assets/vendors/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/vendors/font-awesome/css/font-awesome.css">
   <script src="/assets/vendors/nprogress/nprogress.js"></script>
 </head>
 
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <script src="/assets/vendors/jquery/jquery.js"></script>
+  <script src="./assets/vendors/jquery/jquery.js"></script>
   <script src="/assets/vendors/swipe/swipe.js"></script>
   <script src="./assets/vendors/art-template/template-web.js"></script>
   <!-- 轮播图模板 -->
