--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NBA球员简介首页</title>
+  <title>Stars in NBA</title>
   <link rel="shortcut icon" href="https://mat1.gtimg.com/chinanba/images/favicon.ico">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/vendors/font-awesome/css/font-awesome.css">
